# Programming-Principles-in-C

./: README.md
cps1011-tutorials-main/: README.md
cps1011-tutorials-main/Tutorial1intro/: CMakeLists.txt  Question1.c  Question2.c  Question3.c  Question4.c  Question8.c  main.c  other file.c
cps1011-tutorials-main/Tutorial2dataflow/: CMakeLists.txt  Question1.c  Question2.c  Question3.c  Question4.c  Question5.c  Question6.c  Question7.c  Question8.c
cps1011-tutorials-main/Tutorial3controlflow/: CMakeLists.txt  Question1.c  Question10.c  Question2.c  Question3.c  Question4.c  Question5.c  Question6.c  Question7.c  Question8.c  Question9.c
cps1011-tutorials-main/Tutorial4Modularity/: CMakeLists.txt  ObjectClass.h  Question1.c  Question2.c  Question3.c  Question4.c  Question5.c  Question6.c  Question7.c  Question8.c
cps1011-tutorials-main/Tutorial5compounddatatypes/: CMakeLists.txt  Q1alternate.c  Question1.c  Question10.c  Question11.c  Question2.c  Question3.c  Question4.c  Question5.c  Question6.c  Question7.c  Question8.c  Question9.c  sgets.h
cps1011-tutorials-main/Tutorial6FileI0/: CMakeLists.txt  Question1.c  Question2.c  Question3.c  Question4.c
cps1011-tutorials-main/Tutorial7StorageClasses/: CMakeLists.txt  Question1.c  Question2.c  Question3.c  Question4.c  sgets.c
cps1011-tutorials-main/Tutorial8ADT/: CMakeLists.txt  Question1.c  Question10.c  Question2.c  Question3.c  Question4.c  Question5.c  Question6films.c  Question6list.c  Question8.c  Question9List.h  Question9films.c  Question9list.c  sgets.h
cps1011-tutorials-submission/: README.md
cps1011-tutorials-submission/Question1Assignment/: CMakeLists.txt  functionClass.c  functionClass.h  main.c
cps1011-tutorials-submission/Question2Assignment/: CMakeLists.txt  functionClass2a.c  functionClass2a.h  functionClass2b.c  functionClass2b.h  functionClass2c.c  functionClass2c.h  main2a.c  main2b.c  main2c.c
